force-app/main/default/objects/Deal_Detail__c/Deal_Detail__c.object-meta.xml
<CustomObject>
    <label>Deal Detail</label>
    <nameField>
        <label>Deal ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>