force-app/main/default/objects/Deal_Detail__c/fields/LCD_Warranty_number__c.field-meta.xml
<CustomField>
    <fullName>LCD_Warranty_number__c</fullName>
    <label>LCD Warranty number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>