force-app/main/default/objects/Deal_Detail__c/fields/LED_Service_vendor_phone__c.field-meta.xml
<CustomField>
    <fullName>LED_Service_vendor_phone__c</fullName>
    <label>LED Service vendor phone</label>
    <type>Phone</type>
</CustomField>