force-app/main/default/objects/Deal_Detail__c/fields/Plasma_Panel_Code__c.field-meta.xml
<CustomField>
    <fullName>Plasma_Panel_Code__c</fullName>
    <label>Plasma Panel Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>