force-app/main/default/objects/Deal_Detail__c/recordTypes/RT_for_PL_LCD.recordType-meta.xml
<RecordType>
    <fullName>RT_for_PL_LCD</fullName>
    <active>true</active>
    <label>RT for LCD</label>
</RecordType>