force-app/main/default/objects/Deal_Detail__c/recordTypes/RT_for_PL_LED.recordType-meta.xml
<RecordType>
    <fullName>RT_for_PL_LED</fullName>
    <active>true</active>
    <label>RT for LED</label>
</RecordType>