force-app/main/default/objects/Deal_Detail__c/recordTypes/RT_for_PL_Plasma.recordType-meta.xml
<RecordType>
    <fullName>RT_for_PL_Plasma</fullName>
    <active>true</active>
    <label>RT for Plasma</label>
</RecordType>