force-app/main/default/objects/Deal_Detail__c/recordTypes/RT_for_PL_Secondary.recordType-meta.xml
<RecordType>
    <fullName>RT_for_PL_Secondary</fullName>
    <active>true</active>
    <label>RT for ProductSelection</label>
</RecordType>